--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp Archive Viewer</title>
+    <title>WhatsApp Data Visualiser</title>
     <style>
         :root {
             --bg-color: #0b141a;
@@ -450,4 +450,5 @@
 
 <script src="app.js"></script>
 </body>
+
 </html>
